fixed printing so the left side is invisible

--- a/styles/print.css
+++ b/styles/print.css
@@ -89,7 +89,7 @@ h1 {
 }
 
 .mishna-print .hid {
-    opacity: 0;
+    color: transparent;
 }
 
 .footnote {
